@@ -8,24 +8,26 @@ AUX minion-initd-1 391 SHA256 1e927cf84e4baa368384d148b1b4ca544b53678f5f99280cc3
 AUX syndic-confd-1 188 SHA256 286148f5391d42c04a62a13cc125fa2130b5821e50da913c5a20d3a913e5f2d1 SHA512 0051e13351cef8db81dc075a194bb384723f07d5591b5b4d3f3adf4180afaf7beced470ab79ceca9d1ec0dae62dbd72084eb76af009fc78411a011050a94a2ed WHIRLPOOL fed0dffe202d776cd5f1b74a28c5dac69b082603c9ddf695616a0a6bca5084b9589f1f4d03313f7271754166a9aa136c06aa61e6fd2e3b02d829798aa741c432
 AUX syndic-initd-1 390 SHA256 c9f76eadde7ab72728810dcefcf482f7e06afa398080b9866dd3424b924ac92e SHA512 b91a423031555a810c343f49eafc1e95b3a48f1491c42b5979240f73998b6c4cde679a886234020de7136df83b3da7f92590f9dee345f694678f4b386e5defb2 WHIRLPOOL 1d5feb3915a4986a66dce3ef84fd235cbcfdbd5611e5edb51005d97de81dfd1ad2998e252c0b48276983037c8faf39f40d3880a87c55fb9f42f62c7822c9cd61
 DIST salt-0.16.0.tar.gz 3523789 SHA256 2f79012838a5e674f5cd2126326606bffc3b3cb24c33d8667a11158241b656fc SHA512 1f02b20b71922717cf1ae4ab012e0e2b502a57d52b06ed446ab2fb3ce08912b1bc0a4ed702b0189b1890588af7b3ce94d98bc61815d9d3c03e650b88205fc7f9 WHIRLPOOL 5a597b3804576a5ace0e3f6cd937f81db25bf95b731f646a153c9af2bd28826116b2300f125e02cb5929c1dc8a1a4afcff446be2ee7c7bf2546a3b279f4930ab
+DIST salt-0.16.2.tar.gz 3542692 SHA256 19a2b95c4781e1e4c2ddfed6cce7ecc0a02edc3aa49e7df16958a171fba0e075 SHA512 af1d5fffb1aba21645f2de436d9082bb780987f01a1ab8a9e6b728954023479ee86c885e80662cb43525b161b6891afc42108bda42e5f553bdc7131c88a5fe11 WHIRLPOOL 880a62bd3318af2c373e5d0d717843b89a0cdfa541372797b6f6e51720239b476507605b6d01e7a3a04933fcffad08d3cdfcd54630f28ec34f95b348d2031ee6
 EBUILD salt-0.16.0.ebuild 1939 SHA256 56489702929c74ecd47323dc211df295795815d7330933e8d64b465ec18cd680 SHA512 7e58ff7423de29b9f751a9ff94e09c70057a06b21453d3cc36252b4d9303a493a2750261e0d6547411fafc0efc5e7cb62a2950a8ebaab1ff0a0a36b94a32bab1 WHIRLPOOL d00d3ec3b7947c68acc455ca94d5e68a40d7f814f57d4b9d3644ac76db0a86705d45b9c56283718ae0139324506d690e503279238f82667784fb3345858d7bfb
+EBUILD salt-0.16.2.ebuild 1939 SHA256 779651e25a8acd5d4ea01c36cfa0137d00396ab71585f644d456b80e852ae70a SHA512 a7442e99b5a939e6c2a64509f4e70d24c9161e7aa671a90c760d64111feffb36c0c413e914a45db6455d8056732276b438dea66b4b1100e7ea253741e3c92df4 WHIRLPOOL 16cffbf5d3f4ebb748511aea2fc0883bfb24f7248f5d674c43cfb3d672e874ffcaa3c86e7bdbfab5a397d2a8ae3ef375e0c040fc3a3d125ad19b7f579be1ea4a
 EBUILD salt-9999.ebuild 1937 SHA256 4fe7fef0f0d06e22a8e9515e96910cb77c3a6f3c671c5824a4739390b512a03e SHA512 a642743fd6cb1f191c8d2e4c2ef8fe24fbc4d1d8e89095ea572ed0ef6e230c1cf444887f6aacff2332c85e9b9c30aebc5cf54868514366024a3e54ae902b8315 WHIRLPOOL 5debe7b070b59dbf20a015bc04e478932e7c3ef72699586d5dc4c2af8a5ea87774683762e2089ffd610900b2ef51ff8583201e25293b92a85a4d0097e4b9afd3
-MISC ChangeLog 3413 SHA256 787e14476060d32cc00f4fbb19419adbedde94216878a232b7831aafa6542cea SHA512 3798727a5e41a7ec57ab9a7c6bfcb06d2e2f4a2cc87c6f2550a777cc805fb4db1aecd0abbac6f530f03553798df82cf2223f4c9d91daca8a0e99797346be780c WHIRLPOOL d157daa893e95924c491a7660d1c3a4051383321fb0453ee9ff0dae3a6c0dc12e3208c40f9df84c1f1b4a00b1494dc83a5af7f72eabc8097c2e93263f4d9441c
+MISC ChangeLog 3531 SHA256 5e18f4c6209e4546de4bdee16a6304971d17aff315e9b5cd68a0036223610421 SHA512 9a74ea774e68eb54b5cebc64a30fde2b018ac6c32a9837058fa2ecd4131b93071573d4aa6a48a15c4ca114b8de8c614597054e22eebcb56ac2d9589bff358c36 WHIRLPOOL ff7f90db40d8e5bb338b28eacd6df8c24b4c942c95db67ae56283727292126bf1a356025dffafc53ef0b2f5bcb17166618e9c10217b8637c6f6795abc5acecf1
 MISC metadata.xml 1349 SHA256 c381390f62360f243ee210d099ddfddfc81632186db11964416e5faeb5ef0256 SHA512 dc7da5bb40585036807c1158bd50bdb72f51e4d4255fa1f6b07c2d91fb39cfeda50d288c3367b3e23ee8adfeaddb05840f276639ed045ff5696f4a5c2d5375b3 WHIRLPOOL f137a52155ad3d3f2a5deb5ba66ea7a986d77c1ea271072e63bba5070619e87ba0838412d466abb6fdac705d45bc5fc06ce1950a78d95a8bf5b8932f8c8504fb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR++uMAAoJEHy/RO9cNQiDETUP/2VOn+w1bTDsUahtTMKR/vXJ
-aQyL74DJno2UGK44x98Nq9HvDvqa5MafVgbAoTz9QoIWLya9g3/g64+9rRee9oqM
-Z4+Y6p8M4g1FuCKOAgozNiy5CIUuG4uF0eY9Tu/QqsEmCEvQ6rocwijibG97VX4m
-qyw2xQwOKdRgYElTW3+AvP1spUS+bD9dp9bMenFUOsldqpX0jJy+XrRILA6XKaX/
-EKsuFth7gP5W1AdR3+DqAvDJ210UvA6CWU2SDM4qp/8hx6kgNjQ8EF67NYB3Qfg+
-bfhLMliScIJl2rw0UMm7KHIkSbRHRv6g1JlGC9lKWd24CAFDwf4TnZV82AIXDBrJ
-Lq+Rlz6hr4AWPkMwhlxEhvYkGEdubd3gg/Mmsow5onpexWPvbFHgOII7h3IAt1JV
-CoPwrKz3bDAkErFaSXXKwhFE7k8CXgj6aV63R1qHncrWWaYGJ29bZZgCKB0+f4bw
-f2Jq9FTj1yzwTgsVqcJdwTrIbZyILgD1hlDOMwI+qMpC1751KIEour7gJS8c2HPD
-hAVSL7MR/KG1H89qAZ58IEEmO2zk5W7r93xv1MRpjVRYMuTbi56QpGgjBYj5TWuF
-DkNN/8M9KEDHDFvkKbUp+07384egbGc6MyiFI1rcmh3p5xcoiCHrtVWSGh3AayPo
-IEDo13+n1Eq4Mdi9O3UF
-=Y/RW
+iQIcBAEBCAAGBQJSAIsQAAoJEHy/RO9cNQiDqiQQAJQcAe1SuW0zXR15EcwxvZRn
+c4Io3wVC6tv7dWL+CoEgCDpI38yhsyw7LuAu45D8IMb86f0wszc+zK9uac2UpRQA
+fU4q71TLViJ6tBhs9ssg6Hnm4N4xt3jCxjb5NMT12H7HVATE7rliQbdwgBptu2WQ
+1CLig4HZL8kYjrXDV0LIwOidzkFM0YEQPcntHOYxHMRDyhIVzA/ZxxnWRL24loE1
+Vb9FLfPbwuDe3k4JGKLBqiD3rVvS3/25rWd2oXs6tbkuJ1e0TIFDSQKKRCTacEoN
+1EaEuqm6sUJxgC1Jh2FYiKohWDwP+aNfrdJKSuHFT6mlFEhYwBOcLg5pqQFflDDu
+rBF85u4WAFTPw00pAzmm4NTiFGK2eJsgi9g/b9P8FGqbjQPqNVSi6hLDMqwWzO9P
++pm+GNo16WUJR42w1XdgYzGGdic864kXnZHGpv9iRVJYwAaMvS31v+IN+MEjikSe
+xQqaPWItQ+7Ey2iHSTckSWYkINrGyffm7LC8ecKPeWaVJuiMdHU8UnIoW8AmzRi9
+m8t0SyqvE3dzzeFuA+/d+nQpytSe0na9S7FSclKRQgY6RDdsRQLow0jZrWnlaXse
+I5LfbkqRWAo404+HzCPoZ9i17i3v4cgTHTdq/nVWMZawmj04eRd8qyuNciG6JsMY
+DbuzNIwYkzPEp2Mq+YGv
+=HkQL
 -----END PGP SIGNATURE-----
