@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/salt
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/salt/ChangeLog,v 1.19 2013/08/02 17:25:31 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/salt/ChangeLog,v 1.20 2013/08/06 05:35:02 chutzpah Exp $
+
+*salt-0.16.2 (06 Aug 2013)
+
+  06 Aug 2013; Patrick McLean <chutzpah@gentoo.org> +salt-0.16.2.ebuild:
+  Version bump.
 
   02 Aug 2013; Patrick McLean <chutz@gentoo.org> -salt-0.15.3.ebuild,
   salt-0.16.0.ebuild, salt-9999.ebuild:
